force-app/main/default/objects/Menu_Item__c/Menu_Item__c.object-meta.xml
<CustomObject>
    <label>Menu Item</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Menu Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Menu Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>