force-app/main/default/objects/Menu_Item__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El Menu debe estar activado antes de usarlo. Porfavor, active el Menu checkeando su campo &apos;Activo&apos;</errorMessage>
        <filterItems>
            <field>Menu__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>