force-app/main/default/objects/Menu_Item__c/fields/Menu_Name__c.field-meta.xml
<CustomField>
    <fullName>Menu_Name__c</fullName>
    <formula>Menu__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Menu Name</label>
    <type>Text</type>
</CustomField>