force-app/main/default/objects/Menu_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product.</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>